Fix dark mode pfoot link hover color

--- a/src/layouts/site/index.styl
+++ b/src/layouts/site/index.styl
@@ -106,11 +106,11 @@ body
 	color var(--sleek-text-muted-color)
 
 	a
-		color var(--sleek-text-muted-color)
+		color var(--sleek-link-muted-color)
 
 		&:hover,
 		&:focus
-			color darken($muted, 20%)
+			color var(--sleek-link-muted-hover-color)
 
 	&__upper
 		display flex
