--- a/src/themes/dark.styl
+++ b/src/themes/dark.styl
@@ -89,6 +89,8 @@
 
     --sleek-link-color $blue
     --sleek-link-hover-color lighten($blue, 19.5%)
+    --sleek-link-muted-color alpha(white, 0.7)
+    --sleek-link-muted-hover-color alpha(white, 0.9)
 
     --sleek-divider-border-color #283344
 
