--- a/src/themes/light.styl
+++ b/src/themes/light.styl
@@ -90,6 +90,8 @@
 
     --sleek-link-color darken($blue, 19.5%) // Achieves 4.5 contrast ratio on white background.
     --sleek-link-hover-color darken($blue, 39%)
+    --sleek-link-muted-color $muted
+    --sleek-link-muted-hover-color $dark
 
     --sleek-divider-border-color lighten($silver, 25%)
 
